...
    <!-- Activity and fragment titles -->
    <string name="app_name" translatable="false">ApexPod</string>
    <string name="provider_authority" translatable="false">de.danoeh.apexpod.provider</string>
    <string name="feed_update_receiver_name">Update Subscriptions</string>
    <string name="feeds_label">Podcasts</string>
    <string name="statistics_label">Statistics</string>
    <string name="add_feed_label">Add Podcast</string>
    <string name="episodes_label">Episodes</string>
    <string name="queue_label">Queue</string>
    <string name="all_episodes_short_label">All</string>
    <string name="new_episodes_label">New</string>
    <string name="favorite_episodes_label">Favorites</string>
    <string name="new_label">New</string>
    <string name="settings_label">Settings</string>
    <string name="downloads_label">Downloads</string>
    <string name="open_autodownload_settings">Open Settings</string>
    <string name="downloads_completed_label">Completed</string>
    <string name="downloads_log_label">Log</string>
    <string name="subscriptions_label">Subscriptions</string>
    <string name="subscriptions_list_label">Subscriptions List</string>
    <string name="cancel_download_label">Cancel Download</string>
    <string name="playback_history_label">Playback History</string>
    <string name="gpodnet_main_label">gpodder.net</string>
    <string name="episode_cache_full_title">Episode cache full</string>
    <string name="episode_cache_full_message">The episode cache limit has been reached. You can increase the cache size in the Settings.</string>
...
    <string name="go_to_position_label">Go to this Position</string>

    <!-- Playback history -->
    <string name="clear_history_label">Clear History</string>

    <!-- Other -->
    <string name="confirm_label">Confirm</string>
    <string name="cancel_label">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="reset">Reset</string>
    <string name="url_label">URL</string>
    <string name="support_funding_label">Support</string>
    <string name="support_podcast">Support this Podcast</string>
    <string name="error_label">Error</string>
...
    <string name="pref_mobileUpdate_sum">Select what should be allowed over the mobile data connection</string>
    <string name="pref_mobileUpdate_refresh">Podcast refresh</string>
    <string name="pref_mobileUpdate_images">Cover images</string>
    <string name="pref_mobileUpdate_auto_download">Auto download</string>
    <string name="pref_mobileUpdate_episode_download">Episode download</string>
    <string name="pref_mobileUpdate_streaming">Streaming</string>
    <string name="user_interface_label">User Interface</string>
    <string name="user_interface_sum">Appearance, Subscriptions, Lockscreen</string>
    <string name="pref_set_theme_title">Select Theme</string>
    <string name="pref_nav_drawer_items_title">Set Navigation Drawer items</string>
    <string name="pref_nav_drawer_items_sum">Change which items appear in the navigation drawer.</string>
    <string name="pref_nav_drawer_feed_order_title">Set Subscription Order</string>
    <string name="pref_nav_drawer_feed_order_sum">Change the order of your subscriptions</string>
...
    <string name="pref_skip_silence_title">Skip Silence in Audio</string>
    <string name="pref_videoBehavior_title">Upon exiting video</string>
    <string name="pref_videoBehavior_sum">Behavior when leaving video playback</string>
    <string name="stop_playback">Stop playback</string>
    <string name="continue_playback">Continue audio playback</string>
    <string name="behavior">Behavior</string>
    <string name="pref_back_button_behavior_title">Back Button Behavior</string>
    <string name="pref_back_button_behavior_sum">Change behavior of the back button.</string>
    <string name="back_button_default">Default</string>
    <string name="back_button_open_drawer">Open navigation drawer</string>
    <string name="back_button_double_tap">Double tap to exit</string>
    <string name="back_button_show_prompt">Confirm to exit</string>
    <string name="close_prompt">Are you sure you want to close ApexPod?</string>
    <string name="double_tap_toast">Tap back button again to exit</string>
    <string name="back_button_go_to_page">Go to page…</string>
    <string name="back_button_go_to_page_title">Select page</string>
    <string name="pref_delete_removes_from_queue_title">Delete removes from Queue</string>
    <string name="pref_delete_removes_from_queue_sum">Automatically remove an episode from the queue when it is deleted.</string>
    <string name="pref_filter_feed_title">Subscription Filter</string>
    <string name="pref_filter_feed_sum">Filter your subscriptions in navigation drawer and subscriptions screen.</string>
    <string name="subscriptions_are_filtered">Subscriptions are filtered.</string>
...
    <string name="pref_pausePlaybackForFocusLoss_title">Pause for Interruptions</string>
    <string name="pref_resumeAfterCall_sum">Resume playback after a phone call completes</string>
    <string name="pref_resumeAfterCall_title">Resume after Call</string>
    <string name="pref_restart_required">ApexPod has to be restarted for this change to take effect.</string>

    <!-- Online feed view -->
    <string name="subscribe_label">Subscribe</string>
    <string name="subscribing_label">Subscribing&#8230;</string>
    <string name="preview_episode">Preview</string>
    <string name="stop_preview">Stop preview</string>

    <!-- Content descriptions for image buttons -->
    <string name="rewind_label">Rewind</string>
...
