...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:title="@string/add_feed_label"
            app:navigationIcon="?homeAsUpIndicator"
            android:id="@+id/toolbar"/>

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="4dp"
            app:cardElevation="4dp"
...
<!--                    android:textSize="18sp"-->
<!--                    android:layout_marginTop="16dp"-->
<!--                    android:layout_marginBottom="8dp"-->
<!--                    android:textColor="?android:attr/textColorPrimary"/>-->

            <TextView
                    android:id="@+id/addViaUrlButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:drawableStartCompat="@drawable/ic_feed"
                    app:drawableLeftCompat="@drawable/ic_feed"
                    style="@style/AddPodcastTextView"
                    android:text="@string/add_podcast_by_url"/>
...
